<resources>
    <string name="app_name">Real Estate Manager</string>

    <string name="fragment_warning">Select a Real Estate</string>
    <string name="fragment_media_title">Media</string>
    <string name="fragment_description_title">Description</string>
    <string name="fragment_description_text">this text is just an example as description text.
It long just to have make the body of this screen properly.</string>
    <string name="fragment_surface_title">surface</string>
    <string name="fragment_surface_base">0m</string>
    <string name="fragment_room_title">number of room</string>
    <string name="fragment_room_base">0</string>
    <string name="fragment_agent">agent name</string>
    <string name="fragment_agent_base">unknown</string>
    <string name="fragment_status">actual status</string>
    <string name="fragment_statut_base">unknown</string>
    <string name="fragment_location_title">location</string>
    <string name="fragment_location_base">1 something
        \n apt 6A
        \n somewhere
        \n NL 00000 \n nowhereland</string>
    <string name="fragment_price">Price</string>
    <string name="fragment_price_base">0$</string>
    <string name="fragment_date_entree_title">Creation Date</string>
    <string name="fragment_date_entree_base">unknown</string>
    <string name="fragment_date_vente_title">Sold Date</string>
    <string name="fragment_date_vente_base">unknown</string>
    <string name="fragment_button_edit">Edit</string>
    <string name="fragment_button_new">Create</string>
    <string name="fragment_interest_title">Interest</string>
    <string name="fragment_interest_text">nothing</string>
    <string name="fragment_map_description">map</string>

    <string name="media_description">Image of the selected realEstate</string>

    <string name="real_estate_description">First image of the realEstate</string>
    <string name="real_estate_type_base">House</string>
    <string name="real_estate_city_base">Nowhere</string>
    <string name="real_estate_price_base">Not Real</string>

    <string name="edit_type">type</string>
    <string name="edit_price">price</string>
    <string name="edit_indollar">in dollar?</string>
    <string name="edit_surface">surface</string>
    <string name="edit_description">description</string>
    <string name="edit_address">address</string>
    <string name="edit_city">city</string>
    <string name="edit_country">country</string>
    <string name="edit_agent">agent name</string>
    <string name="edit_apartment">apartment</string>
    <string name="edit_finish">Finish</string>
    <string name="edit_edition">Real Estate Edition</string>
    <string name="edit_image">add image</string>
    <string name="edit_number_image">number of images: </string>
    <string name="edit_interest_button">add interest</string>

    <string name="toolbar_search">search</string>
    <string name="toolbar_map">map</string>
    <string name="toolbar_simulate">mortgage simulator</string>

    <string name="title_activity_edit">where are you?</string>
    <string name="title_activity_maps">Map</string>

    <string name="mg_title">Mortgage Simulator</string>
    <string name="mg_mortgage_title">Mortgage Value</string>
    <string name="mg_mortgage_base">0</string>
    <string name="mg_interest_title">Interest rate</string>
    <string name="mg_interest_base">0</string>
    <string name="mg_interest_percent">%</string>
    <string name="mg_contribution_title">Contribution</string>
    <string name="mg_contribution_base">0</string>
    <string name="mg_duration_title">Duration</string>
    <string name="mg_duration_base">0</string>
    <string name="mg_duration_unit">Month</string>
    <string name="mg_button">calculate</string>
    <string name="mg_result">Minimal payment per month</string>
</resources>
