<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.EditActivity">


    <TextView
        android:id="@+id/edit_type_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_title"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:text="@string/edit_type"
        />

    <EditText
        android:id="@+id/edit_type"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_title"
        android:layout_marginTop="5dp"
        android:layout_marginStart="60dp"
        android:inputType="text"
        android:hint="@string/edit_type"
        android:autofillHints="@string/edit_type" />

    <TextView
        android:id="@+id/edit_price_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_price"
        android:layout_below="@+id/edit_type"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"/>

    <EditText
        android:id="@+id/edit_price"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_type"
        android:layout_marginStart="60dp"
        android:inputType="number"
        android:hint="@string/edit_price"
        android:autofillHints="@string/edit_price"/>

    <Switch
        android:id="@+id/edit_price_type"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/edit_indollar"
        android:layout_toEndOf="@id/edit_price"
        android:layout_below="@id/edit_type"
        android:layout_marginStart="10dp"
        />

    <TextView
        android:id="@+id/edit_surface_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_surface"
        android:layout_below="@+id/edit_price"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        />

    <EditText
        android:id="@+id/edit_surface"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/edit_surface"
        android:autofillHints="@string/edit_surface"
        android:layout_below="@id/edit_price"
        android:layout_marginStart="60dp"
        android:layout_marginTop="5dp"/>

    <Spinner
        android:id="@+id/edit_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_price"
        android:layout_toEndOf="@id/edit_surface"
        android:spinnerMode="dropdown"
        android:background="@android:drawable/btn_dropdown"/>

    <TextView
        android:id="@+id/edit_description_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_description"
        android:layout_below="@+id/edit_surface"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        />

    <EditText
        android:id="@+id/edit_description"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/edit_description"
        android:autofillHints="@string/edit_description"
        android:layout_below="@id/edit_description_title"
        android:layout_marginStart="10dp" />

    <TextView
        android:id="@+id/edit_address_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_address"
        android:layout_below="@+id/edit_description"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"/>

    <TextView
        android:id="@+id/edit_city_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_city"
        android:layout_below="@+id/edit_description"
        android:layout_toEndOf="@+id/edit_address_title"
        android:layout_marginTop="15dp"
        android:layout_marginStart="110dp"/>

    <TextView
        android:id="@+id/edit_country_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_country"
        android:layout_below="@+id/edit_description"
        android:layout_toEndOf="@+id/edit_city_title"
        android:layout_marginTop="15dp"
        android:layout_marginStart="90dp"/>

    <EditText
        android:id="@+id/edit_address"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/edit_address"
        android:autofillHints="@string/edit_address"
        android:layout_below="@id/edit_address_title"
        android:layout_marginStart="10dp"/>

    <EditText
        android:id="@+id/edit_city"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/edit_city"
        android:autofillHints="@string/edit_city"
        android:layout_below="@id/edit_city_title"
        android:layout_toEndOf="@id/edit_address"
        android:layout_marginStart="10dp"/>

    <EditText
        android:id="@+id/edit_country"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/edit_country"
        android:autofillHints="@string/edit_country"
        android:layout_below="@id/edit_country_title"
        android:layout_toEndOf="@id/edit_city"
        android:layout_marginStart="10dp"/>

    <TextView
        android:id="@+id/edit_apartment_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_apartment"
        android:layout_below="@+id/edit_address"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"/>

    <TextView
        android:id="@+id/edit_agent_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_agent"
        android:layout_below="@+id/edit_address"
        android:layout_toEndOf="@id/edit_apartment_title"
        android:layout_marginTop="10dp"
        android:layout_marginStart="40dp"/>

    <EditText
        android:id="@+id/edit_agent"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/edit_agent"
        android:autofillHints="@string/edit_agent"
        android:layout_below="@id/edit_apartment_title"
        android:layout_toEndOf="@id/edit_apartment"
        android:layout_marginStart="10dp"/>

    <EditText
        android:id="@+id/edit_apartment"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/edit_apartment"
        android:autofillHints="@string/edit_apartment"
        android:layout_below="@id/edit_apartment_title"
        android:layout_marginStart="10dp"/>

    <Button
        android:id="@+id/edit_validation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/edit_finish"/>

    <TextView
        android:id="@+id/edit_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_edition"
        android:textSize="30sp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/edit_image_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_apartment"
        android:layout_margin="10dp"
        android:text="@string/edit_number_image"/>

    <Button
        android:id="@+id/edit_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_image_number"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/edit_image"/>

    <EditText
        android:id="@+id/edit_interest"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/fragment_interest_title"
        android:autofillHints="@string/fragment_interest_title"
        android:layout_below="@+id/edit_apartment"
        android:layout_toEndOf="@+id/edit_image_number"
        android:layout_marginStart="20dp"/>

    <Button
        android:id="@+id/edit_interest_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_interest"
        android:layout_toEndOf="@id/edit_image_number"
        android:layout_alignBaseline="@id/edit_image"
        android:text="@string/edit_interest_button"
        android:layout_marginStart="20dp"/>

</RelativeLayout>